# SyzDirect

./: README.md
dataset/: README.md
source/: README.md
source/syzdirect/: bigconfig  kcov.diff  template_config
source/syzdirect/Runner/: Compilation.py  Config.py  Fuzz.py  Main.py  dataset.xlsx
source/syzdirect/Runner/SyscallAnalyze/: InterfaceGenerate.py  SyscallAnalyze.py  TargetPointAnalyze.py
source/syzdirect/syzdirect_function_model/: Makefile
source/syzdirect/syzdirect_function_model/src/: CMakeLists.txt
source/syzdirect/syzdirect_function_model/src/lib/: Analyzer.cc  Analyzer.h  ArgMapParser.cc  ArgMapParser.h  CMakeLists.txt  CallGraph.cc  CallGraphSearch.cc  CallGraphSearch.h  CodeFeatures.cc  CodeFeatures.h  Common.cc  Common.h  CommonSyscallExtractor.cc  CommonSyscallExtractor.h  Config.h  DataFlowAnalysis.cc  DataFlowAnalysis.h  DbgInfoHelper.cc  DbgInfoHelper.h  DescriptionGenerator.cc  DescriptionGenerator.h  DeviceExtractor.cc  DeviceExtractor.h  FilesystemExtractor.cc  FilesystemExtractor.h  FopsFinder.cc  FopsFinder.h  NetworkInterfaceExtractor.cc  NetworkInterfaceExtractor.h  PointerAnalysis.cc  Signature.cc  Signature.h  TypeInitializer.cc  Utils.cc  Utils.h
source/syzdirect/syzdirect_function_model/src/lib/configs/: arg_map1  gt-funcs
source/syzdirect/syzdirect_fuzzer/: Makefile  go.mod  go.sum  relate2context2.json  syz_sig
source/syzdirect/syzdirect_fuzzer/executor/: executor.cc  executor_linux.h
source/syzdirect/syzdirect_fuzzer/prog/: any_test.go  clone.go  direct.go  encoding.go  generation.go  minimization.go  mutation.go  mutation_test.go  prio.go  prog.go  rand.go  resources.go  target.go  types.go
source/syzdirect/syzdirect_fuzzer/syz-features/: features.go
source/syzdirect/syzdirect_fuzzer/syz-fuzzer/: fuzzer.go  fuzzer_test.go  proc.go  workqueue.go
source/syzdirect/syzdirect_fuzzer/syz-manager/: manager.go  rpc.go  stats.go
source/syzdirect/syzdirect_kernel_analysis/: Makefile
source/syzdirect/syzdirect_kernel_analysis/src/: CMakeLists.txt
source/syzdirect/syzdirect_kernel_analysis/src/lib/: Analyzer.cc  Analyzer.h  CMakeLists.txt  CallGraph.cc  Common.cc  Common.h  Config.h  Constraint.cc  Constraint.h  Distance.cc  Distance.h  TypeInitializer.cc  TypeInitializer.h
source/syzdirect/syzdirect_kernel_analysis/src/lib/configs/: Malloc  alloc-funcs  fp-cg-edge.txt  register-funcs.txt  syscall.txt  syscall_base.txt  syscall_black_list.txt  syscall_variant.txt
(+18 files in other folders)
